; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_if_python3.c_ListSubscript.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_if_python3.c_ListSubscript.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @ListSubscript to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ListSubscript(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i64 @PyLong_Check(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @PyLong_AsLong(i32* %15)
  store i64 %16, i64* %6, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i32* @ListItem(i32* %17, i64 %18)
  store i32* %19, i32** %3, align 8
  br label %39

20:                                               ; preds = %2
  %21 = load i32*, i32** %5, align 8
  %22 = call i64 @PySlice_Check(i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %36

24:                                               ; preds = %20
  %25 = load i32*, i32** %5, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @ListLength(i32* %26)
  %28 = call i64 @PySlice_GetIndicesEx(i32* %25, i32 %27, i32* %7, i32* %8, i32* %9, i32* %10)
  %29 = icmp slt i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  store i32* null, i32** %3, align 8
  br label %39

31:                                               ; preds = %24
  %32 = load i32*, i32** %4, align 8
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %8, align 4
  %35 = call i32* @ListSlice(i32* %32, i32 %33, i32 %34)
  store i32* %35, i32** %3, align 8
  br label %39

36:                                               ; preds = %20
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @RAISE_INVALID_INDEX_TYPE(i32* %37)
  store i32* null, i32** %3, align 8
  br label %39

39:                                               ; preds = %36, %31, %30, %14
  %40 = load i32*, i32** %3, align 8
  ret i32* %40
}

declare dso_local i64 @PyLong_Check(i32*) #1

declare dso_local i64 @PyLong_AsLong(i32*) #1

declare dso_local i32* @ListItem(i32*, i64) #1

declare dso_local i64 @PySlice_Check(i32*) #1

declare dso_local i64 @PySlice_GetIndicesEx(i32*, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ListLength(i32*) #1

declare dso_local i32* @ListSlice(i32*, i32, i32) #1

declare dso_local i32 @RAISE_INVALID_INDEX_TYPE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
